[gd_scene load_steps=4 format=2]

[ext_resource path="res://Bode (2).png" type="Texture" id=1]
[ext_resource path="res://Level.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "walkRight"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Bode/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 1, 1, 0, 0 ]
}

[node name="Fundo" type="ColorRect"]
margin_top = -1.0
margin_right = 958.0
margin_bottom = 638.0
script = ExtResource( 2 )

[node name="Bode" type="KinematicBody2D" parent="."]
position = Vector2( 324, 107 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Bode"]
position = Vector2( 1, 1 )
scale = Vector2( 0.164, 0.164 )
texture = ExtResource( 1 )
hframes = 3
vframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Bode"]
root_node = NodePath("../..")
anims/walkRight = SubResource( 1 )

[node name="Left" type="Button" parent="."]
margin_left = 11.0
margin_top = 230.0
margin_right = 82.0
margin_bottom = 250.0
text = "esquerda"

[node name="Right" type="Button" parent="."]
margin_left = 208.0
margin_top = 219.0
margin_right = 261.0
margin_bottom = 256.0
text = "direita"

[node name="Up" type="Button" parent="."]
margin_left = 25.0
margin_top = 273.0
margin_right = 68.0
margin_bottom = 313.0
text = "cima"

[node name="Down" type="Button" parent="."]
margin_left = 220.0
margin_top = 282.0
margin_right = 266.0
margin_bottom = 302.0
text = "baixo"

[node name="Rodar" type="Button" parent="."]
margin_left = 100.0
margin_top = 273.0
margin_right = 193.0
margin_bottom = 299.0
text = "Rodar"

[node name="fundoLista" type="ColorRect" parent="."]
margin_left = 116.0
margin_top = 309.0
margin_right = 217.0
margin_bottom = 617.0
color = Color( 0.0196078, 0.0196078, 0.0196078, 1 )

[node name="Lista" type="Label" parent="fundoLista"]
margin_left = 5.0
margin_top = 1.0
margin_right = 98.0
margin_bottom = 305.0

[connection signal="pressed" from="Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Up" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="Down" to="." method="_on_Down_pressed"]
[connection signal="pressed" from="Rodar" to="." method="_on_lista_pressed"]
